# keyence-lk-g5000

./: .gitignore  CMakeLists.txt
libLkG5000/: CMakeLists.txt  lkg5000.cpp  lkg5000.h
test/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
